outputs_20260331-131445-1cd79b92/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extalth\AppData\Local\Temp\tdd_build_q14ccday\src\egtm_atom_3_phase_inverter_pwm.c:12:
C:\Users\extalth\AppData\Local\Temp\tdd_build_q14ccday\include/egtm_atom_3_phase_inverter_pwm.h:10:31: error: unknown type name 'float32'; did you mean '_Float32'?
   10 | void updateEgtmAtom3phInvDuty(float32 *requestDuty);
      |                               ^~~~~~~
      |                               _Float32
